@@ -192,7 +192,7 @@ if $rpm_mode && [ -f /usr/bin/build-classpath ] ; then
       LOCALCLASSPATH="$LOCALCLASSPATH:$CLASSPATH"
     fi
 
-    # remove class path from launcher -lib option
+    # remove class path from launcher -cp option
     CLASSPATH=""
   fi
 else
@@ -295,7 +295,7 @@ else
     ant_sys_opts="-Djikes.class.path=\"$JIKESPATH\""
   fi
 fi
-ant_exec_command="exec \"$JAVACMD\" $ANT_OPTS -classpath \"$LOCALCLASSPATH\" -Dant.home=\"$ANT_HOME\" -Dant.library.dir=\"$ANT_LIB\" $ant_sys_opts org.apache.tools.ant.launch.Launcher $ANT_ARGS -lib \"$CLASSPATH\" $ant_exec_args"
+ant_exec_command="exec \"$JAVACMD\" $ANT_OPTS -classpath \"$LOCALCLASSPATH\" -Dant.home=\"$ANT_HOME\" -Dant.library.dir=\"$ANT_LIB\" $ant_sys_opts org.apache.tools.ant.launch.Launcher $ANT_ARGS -cp \"$CLASSPATH\" $ant_exec_args"
 if $ant_exec_debug ; then
     echo $ant_exec_command
 fi
